--- a/app/src/main/res/layout/pizza_item.xml
+++ b/app/src/main/res/layout/pizza_item.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/recents_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
@@ -20,7 +18,7 @@
         >
 
         <ImageView
-            android:id="@+id/recents_image"
+            android:id="@+id/pizza_image"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_marginLeft="10dp"
@@ -38,20 +36,12 @@
             android:layout_marginRight="10dp"
             >
             <TextView
-                android:id="@+id/recents_photo_title"
+                android:id="@+id/pizza_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="3"
                 android:ellipsize="end"
                 android:textSize="20sp"
-                />
-            <TextView
-                android:id="@+id/recents_photo_id"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:textSize="16sp"
-                android:textStyle="bold"
                 />
         </LinearLayout>
     </LinearLayout>
