--- a/app/src/main/res/layout/pizza_item.xml
+++ b/app/src/main/res/layout/pizza_item.xml
@@ -1,49 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
     android:foreground="?android:attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
     >
 
-    <LinearLayout
+    <!-- TODO fix scaling -->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/wood_bg_height"
+        android:src="@drawable/bg_wood"
+        android:scaleType="centerCrop" />
+
+    <ImageView
+        android:id="@+id/pizza_image"
+        android:layout_width="@dimen/pizza_image_size"
+        android:layout_height="@dimen/pizza_image_size"
+        android:layout_margin="@dimen/padding_xl"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop" />
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-
-        <ImageView
-            android:id="@+id/pizza_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:scaleType="centerCrop" />
-
-        <LinearLayout
+        android:layout_gravity="bottom"
+        android:paddingTop="@dimen/padding_xl"
+        android:paddingBottom="@dimen/padding_xl"
+        android:background="@color/pizza_item_details_bg">
+        <TextView
+            android:id="@+id/pizza_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="10dp"
-            >
-            <TextView
-                android:id="@+id/pizza_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxLines="3"
-                android:ellipsize="end"
-                android:textSize="20sp"
-                />
-        </LinearLayout>
-    </LinearLayout>
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:textColor="@color/text_white"
+            android:textSize="@dimen/font_l"
+            />
+    </FrameLayout>
 
-</android.support.v7.widget.CardView>
+</FrameLayout>
