--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="pizza_item_details_bg">#40000000</color>
+    <color name="text_white">#FFFFFF</color>
+    <!--<color name="light_grey_background">#dbdbdb</color>-->
+    <!--<color name="light_grey">#898294</color>-->
+    <!--<color name="dark_grey">#544c63</color>-->
+    <!--<color name="dark_grey2">#2D2634</color>-->
+    <!--<color name="light_blue">#b3e7f2</color>-->
 </resources>
