--- a/app/src/main/res/layout/fragment_pizza_detail.xml
+++ b/app/src/main/res/layout/fragment_pizza_detail.xml
@@ -8,6 +8,16 @@
 
     >
 
+
+    <ImageView
+        android:id="@+id/header_image"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:scaleType="centerCrop"
+        android:transitionName="@string/transition_pizza_image"
+        app:layout_collapseMode="parallax" />
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +34,6 @@
             android:layout_width="wrap_content"
             android:id="@+id/recents_photo_id"
             android:layout_gravity="center"
-            android:transitionName="@string/transition_pizza_name"
             android:textSize="16sp"
             android:textStyle="bold"
             />
