--- a/app/src/main/res/layout/fragment_pizza_detail.xml
+++ b/app/src/main/res/layout/fragment_pizza_detail.xml
@@ -10,13 +10,24 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/header_image"
+        <!-- TODO fix scaling -->
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:scaleType="centerCrop"
-            android:transitionName="@string/transition_pizza_image"
-            app:layout_collapseMode="parallax" />
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/wood_bg_height"
+                android:src="@drawable/bg_wood"
+                android:scaleType="centerCrop" />
+
+            <ImageView
+                android:id="@+id/header_image"
+                android:layout_width="@dimen/pizza_image_size"
+                android:layout_height="@dimen/pizza_image_size"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:transitionName="@string/transition_pizza_image" />
+        </FrameLayout>
 
         <TextView
             android:layout_height="wrap_content"
