--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,16 +15,40 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat">
 
-        <TextView
-            android:id="@+id/pizza_name"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:transitionName="@string/transition_pizza_name"
-            android:textColor="@color/colorAccent"
-            android:textStyle="bold"
-            android:text="@string/main_title"
-            android:textSize="@dimen/font_l"
-            android:ellipsize="end"/>
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold"
+                android:text="@string/main_title"
+                android:layout_gravity="center_vertical"
+                android:textSize="@dimen/font_l"
+                android:ellipsize="end"/>
+
+            <TextView
+                android:id="@+id/basket_item_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingRight="@dimen/padding_m"
+                android:textColor="@color/colorAccent"
+                android:layout_gravity="center_vertical"
+                android:textSize="@dimen/font_l"
+                android:text="@string/def_basket_item_count"
+                android:ellipsize="end"/>
+
+            <ImageView
+                android:layout_width="@dimen/basket_icon_size"
+                android:layout_height="@dimen/basket_icon_size"
+                android:paddingRight="@dimen/padding_l"
+                android:layout_gravity="center_vertical"
+                android:src="@mipmap/ic_launcher"/>
+
+        </LinearLayout>
 
     </android.support.v7.widget.Toolbar>
 
@@ -40,17 +64,3 @@
 
 </android.support.constraint.ConstraintLayout>
 
-<!--<android.support.constraint.ConstraintLayout-->
-    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--tools:context="com.adamkis.pizza.ui.activity.MainActivity">-->
-
-    <!--<FrameLayout-->
-        <!--android:id="@+id/fragment_container"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--/>-->
-
-<!--</android.support.constraint.ConstraintLayout>-->
