--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,19 +31,19 @@
                 android:ellipsize="end"/>
 
             <TextView
-                android:id="@+id/basket_item_count"
+                android:id="@+id/cart_item_count"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="@dimen/padding_m"
                 android:textColor="@color/colorAccent"
                 android:layout_gravity="center_vertical"
                 android:textSize="@dimen/font_l"
-                android:text="@string/def_basket_item_count"
+                android:text="@string/def_cart_item_count"
                 android:ellipsize="end"/>
 
             <ImageView
-                android:layout_width="@dimen/basket_icon_size"
-                android:layout_height="@dimen/basket_icon_size"
+                android:layout_width="@dimen/cart_icon_size"
+                android:layout_height="@dimen/cart_icon_size"
                 android:paddingRight="@dimen/padding_l"
                 android:layout_gravity="center_vertical"
                 android:src="@mipmap/ic_launcher"/>
