--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="pizza_item_details_bg">#40000000</color>
     <color name="text_white">#FFFFFF</color>
+    <color name="bg_orange">#FFCD2B</color>
     <!--<color name="light_grey_background">#dbdbdb</color>-->
     <!--<color name="light_grey">#898294</color>-->
     <!--<color name="dark_grey">#544c63</color>-->
