Removing cart items works

--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -22,10 +22,11 @@
             android:layout_width="match_parent"
             />
     </LinearLayout>
-    <android.support.v7.widget.AppCompatCheckBox
-        android:id="@+id/ingredient_selected"
+    <Button
+        android:id="@+id/remove_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/padding_l"
+        android:text="remove"
         android:layout_gravity="center_vertical"/>
 </LinearLayout>
