--- a/app/src/main/res/layout/activity_drinks_chooser.xml
+++ b/app/src/main/res/layout/activity_drinks_chooser.xml
@@ -15,32 +15,16 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat">
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textColor="@color/colorAccent"
-                android:textStyle="bold"
-                android:text="@string/cart"
-                android:layout_gravity="center_vertical"
-                android:textSize="@dimen/font_l"
-                android:ellipsize="end"/>
-
-            <ImageView
-                android:id="@+id/drinks_button"
-                android:layout_width="@dimen/cart_icon_size"
-                android:layout_height="@dimen/cart_icon_size"
-                android:paddingRight="@dimen/padding_l"
-                android:layout_gravity="center_vertical"
-                android:src="@mipmap/ic_launcher"/>
-
-        </LinearLayout>
-
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/colorAccent"
+            android:textStyle="bold"
+            android:text="@string/drinks"
+            android:layout_gravity="center_vertical"
+            android:textSize="@dimen/font_l"
+            android:ellipsize="end"/>
 
     </android.support.v7.widget.Toolbar>
 
