--- a/app/src/main/res/layout/fragment_pizza_detail.xml
+++ b/app/src/main/res/layout/fragment_pizza_detail.xml
@@ -7,46 +7,49 @@
     android:orientation="vertical"
     >
 
-    <ScrollView
-        android:id="@+id/scroll_view"
+    <LinearLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-        <LinearLayout
-            android:id="@+id/container"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <!-- TODO fix scaling -->
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <!-- TODO fix scaling -->
-            <FrameLayout
+            android:layout_height="wrap_content">
+            <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/wood_bg_height"
-                    android:src="@drawable/bg_wood"
-                    android:scaleType="centerCrop" />
+                android:layout_height="@dimen/pizza_image_size"
+                android:src="@drawable/bg_wood"
+                android:scaleType="centerCrop" />
 
-                <ImageView
-                    android:id="@+id/header_image"
-                    android:layout_width="@dimen/pizza_image_size"
-                    android:layout_height="@dimen/pizza_image_size"
-                    android:layout_gravity="center"
-                    android:scaleType="centerCrop"
-                    android:transitionName="@string/transition_pizza_image" />
-            </FrameLayout>
+            <ImageView
+                android:id="@+id/header_image"
+                android:layout_width="@dimen/pizza_image_size"
+                android:layout_height="@dimen/pizza_image_size"
+                android:layout_gravity="center"
+                android:scaleType="centerCrop"
+                android:transitionName="@string/transition_pizza_image" />
+        </FrameLayout>
 
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:text="@string/ingredients"
-                android:textColor="@color/colorAccent"
-                android:padding="@dimen/padding_l"/>
+        <TextView
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="@string/ingredients"
+            android:textColor="@color/colorAccent"
+            android:padding="@dimen/padding_l"/>
 
-        </LinearLayout>
 
-    </ScrollView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/ingredients_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            />
+
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/add_to_cart"
