--- a/app/src/main/res/layout/fragment_pizza_detail.xml
+++ b/app/src/main/res/layout/fragment_pizza_detail.xml
@@ -25,29 +25,8 @@
 
     </FrameLayout>
 
-    <FrameLayout
+    <include
         android:id="@+id/add_to_cart"
-        style="@style/wide_button_orange">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center">
-            <ImageView
-                android:layout_width="@dimen/cart_icon_size"
-                android:layout_height="@dimen/cart_icon_size"
-                android:layout_marginRight="@dimen/padding_m"
-                android:src="@drawable/cart_small"/>
-            <TextView
-                style="@style/text_wide_button_bold"
-                android:layout_marginRight="@dimen/padding_m"
-                android:text="@string/add_to_cart"/>
-            <TextView
-                android:id="@+id/item_price"
-                style="@style/text_wide_button_bold_italic"/>
-        </LinearLayout>
-
-    </FrameLayout>
+        layout="@layout/view_wide_button"/>
 
 </LinearLayout>
