Using custom WideButtonView View for showing add to Cart

--- a/app/src/main/res/layout/fragment_pizza_detail.xml
+++ b/app/src/main/res/layout/fragment_pizza_detail.xml
@@ -25,8 +25,9 @@
 
     </FrameLayout>
 
-    <include
+    <com.adamkis.pizza.ui.view.WideButtonView
         android:id="@+id/add_to_cart"
-        layout="@layout/view_wide_button"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
