Using WideButton on Cart Fragment

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -14,36 +14,10 @@
         android:layout_weight="1"
         />
 
-    <LinearLayout
+
+    <com.adamkis.pizza.ui.view.WideButtonView
         android:id="@+id/checkout_button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:orientation="horizontal"
-        android:background="@color/bg_orange"
-        android:padding="@dimen/padding_xl"
-        android:gravity="center">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="@dimen/cart_icon_size"
-                android:layout_height="@dimen/cart_icon_size"
-                android:src="@mipmap/ic_launcher"/>
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/checkout"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/colorAccent"/>
-        </LinearLayout>
-
-
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
