--- a/app/src/main/res/layout/view_wide_button.xml
+++ b/app/src/main/res/layout/view_wide_button.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
+    android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/wide_button_orange">
+    style="@style/wide_button">
 
     <LinearLayout
         android:layout_width="wrap_content"
