--- a/app/src/main/res/layout/fragment_pizza_detail.xml
+++ b/app/src/main/res/layout/fragment_pizza_detail.xml
@@ -25,7 +25,7 @@
 
     </FrameLayout>
 
-    <com.adamkis.pizza.ui.view.WideButtonView
+    <com.adamkis.pizza.ui.view.AddToCartView
         android:id="@+id/add_to_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
