Showing price on checkout button

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -15,7 +15,7 @@
         />
 
 
-    <com.adamkis.pizza.ui.view.WideButtonView
+    <com.adamkis.pizza.ui.view.CheckoutView
         android:id="@+id/checkout_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
