--- a/app/src/main/res/layout/fragment_drinks.xml
+++ b/app/src/main/res/layout/fragment_drinks.xml
@@ -20,40 +20,10 @@
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:indeterminate="true" />
 
-
-    <LinearLayout
-        android:id="@+id/checkout_button"
+    <com.adamkis.pizza.ui.view.AddedToCartView
+        android:id="@+id/added_to_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:foreground="?android:attr/selectableItemBackground"
-        android:clickable="true"
-        android:focusable="true"
-        android:orientation="horizontal"
-        android:background="@color/bg_orange"
-        android:padding="@dimen/padding_xl"
-        android:layout_gravity="bottom"
-        android:gravity="center"
-        >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="@dimen/cart_icon_size"
-                android:layout_height="@dimen/cart_icon_size"
-                android:src="@mipmap/ic_launcher"/>
-
-            <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="@string/checkout"
-                android:layout_gravity="center_vertical"
-                android:textColor="@color/colorAccent"/>
-        </LinearLayout>
-
-
-    </LinearLayout>
-
+        android:layout_gravity="bottom"/>
 
 </android.support.design.widget.CoordinatorLayout>
