--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,14 +16,11 @@
     <!--<dimen name="font_xxl">30dp</dimen>-->
 
     <dimen name="font_16">16sp</dimen>
+    <dimen name="font_20">20sp</dimen>
     <dimen name="font_46">46sp</dimen>
 
-    <dimen name="height_xxs">24dp</dimen>
-    <dimen name="height_xs">30dp</dimen>
-    <dimen name="height_s">36dp</dimen>
-    <dimen name="height_m">48dp</dimen>
-    <dimen name="height_l">56dp</dimen>
-    <dimen name="height_xl">72dp</dimen>
+    <dimen name="height_56">56dp</dimen>
+    <dimen name="height_xl">56dp</dimen>
 
     <dimen name="pizza_image_size">350dp</dimen>
     <dimen name="wood_bg_height">400dp</dimen>
