--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,5 +24,6 @@
     <dimen name="wood_bg_height">400dp</dimen>
     <dimen name="cart_icon_size">24dp</dimen>
     <dimen name="bg_size_cart_item_count">19dp</dimen>
+    <dimen name="drinks_icon_size">24dp</dimen>
 
 </resources>
