--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -8,25 +8,36 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_margin="@dimen/padding_l"
+        android:layout_marginTop="@dimen/padding_9"
+        android:layout_marginBottom="@dimen/padding_9"
+        android:layout_marginLeft="@dimen/padding_16"
         android:orientation="vertical">
         <TextView
             android:id="@+id/order_item_name"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:textColor="@color/text_grey_dark"
+            android:textSize="@dimen/font_16"
             />
         <TextView
             android:id="@+id/order_item_price"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/padding_s"
+            android:paddingTop="@dimen/padding_3"
             android:layout_width="match_parent"
+            android:textColor="@color/text_grey_light"
+            android:textSize="@dimen/font_14"
             />
     </LinearLayout>
-    <Button
+    <FrameLayout
         android:id="@+id/remove_item"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_l"
-        android:text="remove"
-        android:layout_gravity="center_vertical"/>
+        android:layout_height="match_parent"
+        android:foreground="?attr/selectableItemBackground">
+        <ImageView
+            android:layout_width="@dimen/list_action_icon_size"
+            android:layout_height="@dimen/list_action_icon_size"
+            android:layout_margin="@dimen/padding_16"
+            android:src="@drawable/delete"
+            android:layout_gravity="center_vertical"/>
+    </FrameLayout>
 </LinearLayout>
