--- a/app/src/main/res/layout/ingredient_item.xml
+++ b/app/src/main/res/layout/ingredient_item.xml
@@ -8,24 +8,30 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_margin="@dimen/padding_l"
+        android:layout_marginTop="@dimen/padding_9"
+        android:layout_marginBottom="@dimen/padding_9"
+        android:layout_marginLeft="@dimen/padding_16"
         android:orientation="vertical">
         <TextView
             android:id="@+id/ingredient_name"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
+            android:textColor="@color/text_grey_dark"
+            android:textSize="@dimen/font_16"
             />
         <TextView
             android:id="@+id/ingredient_price"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/padding_s"
+            android:paddingTop="@dimen/padding_3"
             android:layout_width="match_parent"
+            android:textColor="@color/text_grey_light"
+            android:textSize="@dimen/font_14"
             />
     </LinearLayout>
     <android.support.v7.widget.AppCompatCheckBox
         android:id="@+id/ingredient_selected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_l"
+        android:layout_margin="@dimen/padding_16"
         android:layout_gravity="center_vertical"/>
 </LinearLayout>
